plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation libs.guava
    implementation 'org.xerial:sqlite-jdbc:3.44.0.0'
    implementation 'org.slf4j:slf4j-nop:2.0.11'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'routybor.otp.Messenger.MessengerFrame'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}
